--- a/index.html
+++ b/index.html
@@ -16,37 +16,27 @@
     <p class="hero-text">Discover the essence of the Lone Star State with our exclusive KACHBO FRAGRANCES.</p>
 </div>
 
-<p class="intro">Each fragrance captures the spirit of ranch life, combining earthy notes and vibrant aromas to evoke the beauty of the Texan landscape.</p>
+<p class="intro">Limited Time Offer! Buy 1 Get 1 Free on Attars! Hurry, offer ends soon!</p>
 
 <h2>MEN</h2>
 <div class="product-grid men">
     <div class="product prime-product">
         <img src="images/TurtlePirfume.PNG" alt="Rancher's Reserve" class="product-image">
         <div class="product-info">
-            <h2>KACHBO Rancher's Reserve</h2>
-            <p>A bold blend of cedarwood and leather, this scent embodies the rugged charm of the Texas plains. With hints of sage and a touch of warm amber, it's perfect for the modern cowboy.</p>
-            <p>Notes: Cedarwood, Leather, Sage, Amber</p>
-            <p class="price">1.05 OZ: $24.99 | 2.1 OZ: $33.99</p>
+            <h2>KACHBO MUD</h2>
+            <p>With hints of sage and a touch of warm Mud, it's perfect for the modern cowboy.</p>
+            <p>NOTES: Mud, Jasmine, Cardamon</p>
+            <p class="price">Perfume - 1oz</p>
         </div>
     </div>
 
     <div class="product">
         <img src="images/TurtlePirfume.PNG" alt="Prairie Petals" class="product-image">
         <div class="product-info">
-            <h2>KACHBO Rodeo Reserve</h2>
-            <p>Experience the delicate beauty of wildflowers in bloom. This soft, floral fragrance combines notes of jasmine, wild rose, and fresh greenery, creating an uplifting and refreshing aroma.</p>
-            <p>Notes: Jasmine, Wild Rose, Greenery</p>
-            <p class="price">1.05 OZ: $24.99 | 2.1 OZ: $33.99</p>
-        </div>
-    </div>
-
-    <div class="product">
-        <img src="images/TurtlePirfume.PNG" alt="Cattleman's Charm" class="product-image">
-        <div class="product-info">
-            <h2>KACHBO Cattleman's Creed</h2>
-            <p>A warm and inviting scent, Cattleman's Charm features rich notes of tobacco and vanilla, balanced with a hint of smoky vetiver. This fragrance captures the essence of evenings spent around the campfire.</p>
-            <p>Notes: Tobacco, Vanilla, Vetiver</p>
-            <p class="price">2.1 OZ: $42.99</p>
+            <h2>KACHBO SANDLEWOOD</h2>
+            <p>With notes of jasmine, sandlewood, creating an uplifting and refreshing aroma.</p>
+            <p>NOTES: Sandlewood, Jasmine, Cardamom</p>
+            <p class="price">Attar - .17oz | Perfume - 1oz</p>
         </div>
     </div>
 </div>
@@ -56,30 +46,20 @@
     <div class="product">
         <img src="images/TurtlePirfume.PNG" alt="Dusty Daisy" class="product-image">
         <div class="product-info">
-            <h2>KACHBO Rancher's Reserve</h2>
-            <p>Light and airy, Dusty Daisy evokes the carefree spirit of a sunny day on the ranch. With notes of fresh daisies, citrus, and soft musk, this fragrance is perfect for everyday wear.</p>
-            <p>Notes: Daisies, Citrus, Soft Musk</p>
-            <p class="price">1.05 OZ: $24.99 | 2.1 OZ: $33.99</p>
+            <h2>KACHBO CARDAMOM</h2>
+            <p>With notes of fresh cardamom, jasmine, this fragrance is perfect for everyday wear.</p>
+            <p>NOTES: Cardamom, Jasmine, Sandlewood</p>
+            <p class="price">Perfume - 1oz</p>
         </div>
     </div>
 
     <div class="product">
         <img src="images/TurtlePirfume.PNG" alt="Wrangler's Edge" class="product-image">
         <div class="product-info">
-            <h2>KACHBO Rodeo Reserve</h2>
-            <p>Rugged yet refined, Wrangler's Edge combines earthy notes of leather and wood with a refreshing splash of citrus. This masculine fragrance is perfect for those who embrace adventure.</p>
-            <p>Notes: Leather, Wood, Citrus</p>
-            <p class="price">1.05 OZ: $24.99 | 2.1 OZ: $33.99</p>
-        </div>
-    </div>
-
-    <div class="product">
-        <img src="images/TurtlePirfume.PNG" alt="Wildflower Whispers" class="product-image">
-        <div class="product-info">
-            <h2>KACHBO Cattlewomen's Charm</h2>
-            <p>A romantic and enchanting scent, Wildflower Whispers features a blend of sweet honeysuckle, warm sandalwood, and a touch of honey. Ideal for those who love a hint of sweetness.</p>
-            <p>Notes: Honeysuckle, Sandalwood, Honey</p>
-            <p class="price">2.1 OZ: $42.99</p>
+            <h2>KACHBO JASMINE</h2>
+            <p>With notes of jasmine and sandlewood with a refreshing splash of cardamom. This masculine fragrance is perfect for those who embrace adventure.</p>
+            <p>NOTES: Jasmine, Cardamom, Sandlewood</p>
+            <p class="price">Attar - .17oz | Perfume - 1oz</p>
         </div>
     </div>
 </div>
