--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <div class="product">
         <img src="images/TurtlePirfume.PNG" alt="Prairie Petals" class="product-image">
         <div class="product-info">
-            <h2>KACHBO SANDLEWOOD</h2>
-            <p>With notes of jasmine, sandlewood, creating an uplifting and refreshing aroma.</p>
-            <p>NOTES: Sandlewood, Jasmine, Cardamom</p>
+            <h2>KACHBO SANDALWOOD</h2>
+            <p>With notes of jasmine, sandalwood, creating an uplifting and refreshing aroma.</p>
+            <p>NOTES: Sandalwood, Jasmine, Cardamom</p>
             <p class="price">Attar - .17oz | Perfume - 1oz</p>
         </div>
     </div>
@@ -48,7 +48,7 @@
         <div class="product-info">
             <h2>KACHBO CARDAMOM</h2>
             <p>With notes of fresh cardamom, jasmine, this fragrance is perfect for everyday wear.</p>
-            <p>NOTES: Cardamom, Jasmine, Sandlewood</p>
+            <p>NOTES: Cardamom, Jasmine, Sandalwood</p>
             <p class="price">Perfume - 1oz</p>
         </div>
     </div>
@@ -57,8 +57,8 @@
         <img src="images/TurtlePirfume.PNG" alt="Wrangler's Edge" class="product-image">
         <div class="product-info">
             <h2>KACHBO JASMINE</h2>
-            <p>With notes of jasmine and sandlewood with a refreshing splash of cardamom. This masculine fragrance is perfect for those who embrace adventure.</p>
-            <p>NOTES: Jasmine, Cardamom, Sandlewood</p>
+            <p>With notes of jasmine and sandalwood with a refreshing splash of cardamom. This masculine fragrance is perfect for those who embrace adventure.</p>
+            <p>NOTES: Jasmine, Cardamom, Sandalwood</p>
             <p class="price">Attar - .17oz | Perfume - 1oz</p>
         </div>
     </div>
