--- a/index.html
+++ b/index.html
@@ -311,9 +311,10 @@
     <div class="hero-section">
         <img src="images/TurtlePirfume.PNG" alt="Turtle Perfume Bottle" class="hero-image">
         <p class="hero-text">Discover the essence of the Lone Star State with our exclusive KACHBO FRAGRANCES.</p>
+        <p class="hero-text">Limited Time Offer! Buy one get one 20% off! Hurry, offer ends soon!</p>
     </div>
 
-    <p class="intro">Limited Time Offer! Buy 1 Get 1 Free on Attars! Hurry, offer ends soon!</p>
+   
 
     <!-- Product Grid for Men and Women -->
     <section class="product-grid men">
