--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         }
 
         .hero-image {
-            max-width: 300px;
+            max-width: 200px;
             height: auto;
             margin-right: 2em;
             opacity: 0.8;
@@ -111,7 +111,7 @@
         .product {
             display: flex;
             flex-direction: column;
-            background-color: #FFFACD; /* Light yellow background */
+            background-color: #e2efde; /* Light yellow background */
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
