--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
     <!-- Hero Section -->
     <div class="hero-section">
-        <img src="images/TurtlePirfume.PNG" alt="Turtle Perfume Bottle" class="hero-image">
+        <img src="images/IMG_8706.jpg" alt="Turtle Perfume Bottle" class="hero-image">
         <p class="hero-text">Discover the essence of the Lone Star State with our exclusive KACHBO FRAGRANCES.</p>
         <p class="hero-text">Limited Time Offer! Buy one get one 20% off! Hurry, offer ends soon!</p>
     </div>
@@ -320,21 +320,21 @@
     <section class="product-grid men">
         <!-- Men Products -->
         <div class="product">
-            <img src="images/TurtlePirfume.PNG" alt="KACHBO MUD">
+            <img src="images/IMG_8706.jpg" alt="KACHBO MUD">
             <h2>KACHBO MUD</h2>
             <p>With hints of sage and a touch of warm Mud, it's perfect for the modern cowboy.</p>
             <p>NOTES: Mud, Jasmine, Cardamom</p>
-            <p class="price">1oz</p>
+            <p class="price">1oz - $24</p>
             <button class="shop-button" onclick="openForm()">Order</button>
        </div>
 
         <!-- New Product 1: KACHBO SANDALWOOD -->
         <div class="product">
-            <img src="images/TurtlePirfume.PNG" alt="KACHBO SAGE">
+            <img src="images/IMG_8706.jpg" alt="KACHBO SAGE">
             <h2>KACHBO SANDALWOOD</h2>
             <p>With notes of jasmine, sandalwood, creating an uplifting and refreshing aroma.</p>
             <p>NOTES: Sandalwood, Jasmine, Cardamom</p>
-            <p class="price">1oz</p>
+            <p class="price">1oz - $24 </p>
             <button class="shop-button" onclick="openForm()">Order</button>
         </div>
     </section>
@@ -342,21 +342,21 @@
     <section class="product-grid women">
         <!-- Women Products -->
         <div class="product">
-            <img src="images/TurtlePirfume.PNG" alt="KACHBO CARDAMOM">
+            <img src="images/IMG_8706.jpg" alt="KACHBO CARDAMOM">
             <h2>KACHBO JASMINE</h2>
             <p>With notes of jasmine and sandalwood with a refreshing splash of cardamom. This masculine fragrance is perfect for those who embrace adventure.</p>
             <p>NOTES: Jasmine, Cardamom, Sandalwood</p>
-            <p class="price">1oz</p>
+            <p class="price">1oz - $24</p>
             <button class="shop-button" onclick="openForm()">Order</button>
         </div>
 
           <!-- Women Products -->
           <div class="product">
-            <img src="images/TurtlePirfume.PNG" alt="KACHBO CARDAMOM">
+            <img src="images/IMG_8706.jpg" alt="KACHBO CARDAMOM">
             <h2>KACHBO CARDAMOM</h2>
             <p>With notes of fresh cardamom and jasmine, this fragrance is perfect for everyday wear.</p>
             <p>NOTES: Cardamom, Jasmine, Sandalwood</p>
-            <p class="price">1oz</p>
+            <p class="price">1oz - $24</p>
             <button class="shop-button" onclick="openForm()">Order</button>  
         </div>
     </section>
