--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <img src="images/IMG_8706.jpg" alt="KACHBO MUD">
             <h2>KACHBO MUD</h2>
             <p>With hints of sage and a touch of warm Mud, it's perfect for the modern cowboy.</p>
-            <p>NOTES: Mud, Jasmine, Cardamom</p>
+            <p>Note: Mud</p>
             <p class="price">1oz - $24</p>
             <button class="shop-button" onclick="openForm()">Order</button>
        </div>
@@ -332,8 +332,8 @@
         <div class="product">
             <img src="images/IMG_8706.jpg" alt="KACHBO SAGE">
             <h2>KACHBO SANDALWOOD</h2>
-            <p>With notes of jasmine, sandalwood, creating an uplifting and refreshing aroma.</p>
-            <p>NOTES: Sandalwood, Jasmine, Cardamom</p>
+            <p>With notes of sandalwood, saffron, creating an uplifting and refreshing aroma.</p>
+            <p>Note: Sandalwood and Saffron</p>
             <p class="price">1oz - $24 </p>
             <button class="shop-button" onclick="openForm()">Order</button>
         </div>
@@ -344,8 +344,8 @@
         <div class="product">
             <img src="images/IMG_8706.jpg" alt="KACHBO CARDAMOM">
             <h2>KACHBO JASMINE</h2>
-            <p>With notes of jasmine and sandalwood with a refreshing splash of cardamom. This masculine fragrance is perfect for those who embrace adventure.</p>
-            <p>NOTES: Jasmine, Cardamom, Sandalwood</p>
+            <p>With notes of fresh jasmine, this fragrance is perfect for everyday wear.</p>
+            <p>Note: Jasmine</p>
             <p class="price">1oz - $24</p>
             <button class="shop-button" onclick="openForm()">Order</button>
         </div>
@@ -354,8 +354,8 @@
           <div class="product">
             <img src="images/IMG_8706.jpg" alt="KACHBO CARDAMOM">
             <h2>KACHBO CARDAMOM</h2>
-            <p>With notes of fresh cardamom and jasmine, this fragrance is perfect for everyday wear.</p>
-            <p>NOTES: Cardamom, Jasmine, Sandalwood</p>
+            <p>With notes of fresh cardamom, this fragrance is perfect for everyday wear.</p>
+            <p>Note: Cardamom</p>
             <p class="price">1oz - $24</p>
             <button class="shop-button" onclick="openForm()">Order</button>  
         </div>
