--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
      
         /* Styling the menu bar */
                 .menu-bar {
-                    background-color: #333;
+                    background-color: #16213E;
                     display: flex;
                     justify-content: center; /* Centering the links */
                     align-items: center; /* Vertically center the links */
